fix line spacing and prod build v1.0.10

--- a/iwantfood/src/App.css
+++ b/iwantfood/src/App.css
@@ -61,7 +61,7 @@
 
 .cuisine {
   font-size: 1.5em;
-  line-height: 0.2em;
+  line-height: 1em;
   margin: 1em;
   color: black;
 }
